Segundo commit Actualización Curriculum

--- a/INTRO-WEB-5-CSS-AVANZADO/Pages/Curriculum.html
+++ b/INTRO-WEB-5-CSS-AVANZADO/Pages/Curriculum.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <header>
+        <header class="row">
             <div id="photo-header">
                 <div id="photo">
                     <img src="../Imgs/b16cf30a73e39f9b8819bd9b61ff6b09.jpg" alt="Daniela">
@@ -62,9 +62,116 @@
 
             </nav>
         </header>
-        <section>
+        <!--Fin del header-->
+
+        <!--Inicio de Section-->
+        <section class="row clearfix">
+            <div class="pull-left col-60">
+                <div class="row">
+                    <article>
+                        <h2>Acerca de</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta incidunt inventore maiores?
+                            Facilis distinctio similique voluptatibus placeat non reiciendis corrupti illo excepturi
+                            cupiditate laborum molestiae, beatae reprehenderit, saepe aperiam ad?</p>
+                    </article>
+
+                    <article class="education">
+                        <h2 class="col-10">Educación</h2>
+                        <ul>
+                            <li>
+                                <!-- <div class=" containerflex"> -->
+                                    <div class="pull-left col-10"> 2012</div>
+                                    <div class="pull-left col-90 description">
+                                        <h3>I was born in Distrito Federal, México </h3>
+                                        <br>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ut eveniet
+                                            veritatis dolorem maiores perspiciatis quos, eius deleniti vero nisi amet
+                                            eligendi
+                                            et cum ea nemo quia. Numquam, odio iste!
+                                        </p>
+                                    </div>
+                                <!-- </div> -->
+                            </li>
+
+                            <li>
+                                <!-- <div class=" containerflex"> -->
+                                    <div class="col-10 pull-left"> 1992</div>
+                                    <div class="pull-left col-90 description">
+                                        <h3>I was born Distrito Federal, México </h3>
+                                        <br>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ut eveniet
+                                            veritatis dolorem
+                                            maiores perspiciatis quos, eius deleniti vero nisi amet eligendi et cum ea
+                                            nemo quia. Numquam, odio
+                                            iste!</p>
+                                    </div>
+                                <!-- </div> -->
+                            </li>
+                        </ul>
+                    </article>
+
+                    <!-- /**********************Experiencia*****************************/ -->
+
+                    <article>
+                        <h2>Experiencia</h2>
+                        <div class="job clearfix">
+
+                            <div class="pull-left col-10">
+                                <div class="where">Google</div>
+                                <div class="year">2013-2014</div>
+                            </div>
+                            <div class="pull-left col-90">
+                                <h3 class="profesion">Javascript</h3>
+                                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+                                    enim assumenda delectus possimus fuga molestias laudantium soluta voluptate
+                                    distinctio a ab iste ut sint neque sapiente, beatae quo ducimus magnam!</p>
+                            </div>
+                            <!-- </div> -->
+
+                            <!-- <div class="job clearfix"> -->
+                            <div class="pull-left col-10">
+                                <div class="where">Google</div>
+                                <div class="year">2011-2010</div>
+                            </div>
+                            <div class="pull-left col-90">
+                                <h3 class="profesion">Front-end</h3>
+                                <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt,
+                                    facere earum ducimus rerum est ipsam quaerat quasi, a recusandae dolorem illo quia
+                                    iure, voluptatibus similique provident distinctio error minus non?</p>
+                                <!-- </div> -->
+                            </div>
+                    </article>
+                </div>
+            </div>
+
+            <!-- /*****40****/ -->
+
+            <div class="pull-left col-40">
+                <div class="row">
+                    <h2>Contacto</h2>
+                    <ul>
+                        <li> <strong>Email:</strong> dsruiz11@gmail.com</li>
+                        <li> <strong>skype:</strong> DanielaRuiz</li>
+                        <li> <strong>Twiter:</strong> @DaniiRu</li>
+                        <li><strong>Facebook:</strong> /DanielaRuiz</li>
+                    </ul>
+
+                   <!--/*****************skills******************/--> 
+                   <h2>skills</h2>
+                    <ul class="containerskills"></ul>
+                        <li class="skills html ">HTML 90%</li>
+                        <li class="skills css">CSS 80%</li>
+                        <li class="skills js">Javascript 65%</li>
+                        <li class="skills python">Python 60%</li>
+
+                   </ul>
+
+                   </div>
+
+                </div>
 
         </section>
+
         <footer>
 
         </footer>
