--- a/INTRO-WEB-5-CSS-AVANZADO/Pages/Curriculum.html
+++ b/INTRO-WEB-5-CSS-AVANZADO/Pages/Curriculum.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae :: Daniela </title>
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
 <body>
@@ -72,39 +73,35 @@
                         <h2>Acerca de</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta incidunt inventore maiores?
                             Facilis distinctio similique voluptatibus placeat non reiciendis corrupti illo excepturi
-                            cupiditate laborum molestiae, beatae reprehenderit, saepe aperiam ad?</p>
+                            cupiditate laborum molestiae.</p>
                     </article>
 
                     <article class="education">
-                        <h2 class="col-10">Educación</h2>
+                        <h2 class="col-60">Educación</h2>
                         <ul>
                             <li>
                                 <!-- <div class=" containerflex"> -->
-                                    <div class="pull-left col-10"> 2012</div>
-                                    <div class="pull-left col-90 description">
-                                        <h3>I was born in Distrito Federal, México </h3>
-                                        <br>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ut eveniet
-                                            veritatis dolorem maiores perspiciatis quos, eius deleniti vero nisi amet
-                                            eligendi
-                                            et cum ea nemo quia. Numquam, odio iste!
-                                        </p>
-                                    </div>
+                                <div class="pull-left col-10"> 2012</div>
+                                <div class="pull-left col-80 description">
+                                    <h3>I was born in Distrito Federal, México </h3>
+                                    <br>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ut eveniet
+                                        veritatis dolorem maiores perspiciatis quos.
+                                    </p>
+                                </div>
                                 <!-- </div> -->
                             </li>
 
                             <li>
                                 <!-- <div class=" containerflex"> -->
-                                    <div class="col-10 pull-left"> 1992</div>
-                                    <div class="pull-left col-90 description">
-                                        <h3>I was born Distrito Federal, México </h3>
-                                        <br>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ut eveniet
-                                            veritatis dolorem
-                                            maiores perspiciatis quos, eius deleniti vero nisi amet eligendi et cum ea
-                                            nemo quia. Numquam, odio
-                                            iste!</p>
-                                    </div>
+                                <div class="col-10 pull-left"> 1992</div>
+                                <div class="pull-left col-80 description">
+                                    <h3>I was born Distrito Federal, México </h3>
+                                    <br>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ut eveniet
+                                        veritatis dolorem
+                                        maiores perspiciatis quos.</p>
+                                </div>
                                 <!-- </div> -->
                             </li>
                         </ul>
@@ -124,7 +121,7 @@
                                 <h3 class="profesion">Javascript</h3>
                                 <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
                                     enim assumenda delectus possimus fuga molestias laudantium soluta voluptate
-                                    distinctio a ab iste ut sint neque sapiente, beatae quo ducimus magnam!</p>
+                                    distinctio a ab iste ut sint.</p>
                             </div>
                             <!-- </div> -->
 
@@ -136,8 +133,7 @@
                             <div class="pull-left col-90">
                                 <h3 class="profesion">Front-end</h3>
                                 <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt,
-                                    facere earum ducimus rerum est ipsam quaerat quasi, a recusandae dolorem illo quia
-                                    iure, voluptatibus similique provident distinctio error minus non?</p>
+                                    facere earum ducimus rerum est ipsam quaerat quasi, a recusandae dolorem illo quia.</p>
                                 <!-- </div> -->
                             </div>
                     </article>
@@ -156,24 +152,60 @@
                         <li><strong>Facebook:</strong> /DanielaRuiz</li>
                     </ul>
 
-                   <!--/*****************skills******************/--> 
-                   <h2>skills</h2>
-                    <ul class="containerskills"></ul>
-                        <li class="skills html ">HTML 90%</li>
-                        <li class="skills css">CSS 80%</li>
-                        <li class="skills js">Javascript 65%</li>
-                        <li class="skills python">Python 60%</li>
+                    <!--/*****************skills******************/-->
+                    <!--Dos formas de poner skills:-->
+                    <h2>skills</h2>
+                    <ul class="skills"></ul>
+                    <li class="html">HTML 90%</li>
+                    <li class="css">CSS 80%</li>
+                    <li class="javaEE"> JavaEE 75%</li>
+                    <li class="js">Javascript 65%</li>
+                    <li class="python">Python 60%</li>
+                    </ul>
 
-                   </ul>
+                    <ul class="skills">
+                        <li class="skills-item" data-percent="90">Java</li>
+                        <li class="skills-item" data-percent="80">HTML</li>
+                        <li class="skills-item" data-percent="60">CSS</li>
+                        <li class="skills-item" data-percent="40">Javascript</li>
+                        <li class="skills-item" data-percent="20">Python</li>
+                    </ul>
 
-                   </div>
+                    <h2>Idiomas</h2>
+                    <div>
+                        <div>
+                            Ingles
+                            <div class="icon-stars">
+                                <div class="icon-stars-red" style="width: 40%"> </div>
+                            </div>
+                        </div>
+
+                        <div>Español
+                            <div class="icon-stars">
+                                <div class="icon-stars-red" style="width: 60% ;"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h2>Hobbies</h2>
+                    <span class="hobby"> <i class="fa fa-heartbeat" aria-hidden="true"></i> Deporte</span>
+                    <span class="hobby"> <i class="fa-solid fa-user"></i> Fotografia</span>
+                    <span class="hobby"> <i class="fa-solid fa-music"></i> Musica</span>
+
 
                 </div>
 
+            </div>
+
         </section>
-
-        <footer>
-
+<br>
+<br>
+    
+        <footer >
+            <div >
+                <p class="footer-p">Desarrollador Front-end, Generation 2023</p>
+    
+            </div>
         </footer>
     </div>
 </body>
