ultimo commit, practica terminada.

--- a/INTRO-WEB-6-BOOTSTRAP/Pages/Bootstrap-2-practica.html
+++ b/INTRO-WEB-6-BOOTSTRAP/Pages/Bootstrap-2-practica.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col">
             </div>
-            <div class="col">
+            <div class="col" style="height: 50%; width: 50%;">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -101,7 +101,7 @@
 
         <!--Cards con Modal-->
         <div class="card-group">
-            <div class="card">
+            <div class="card" style="margin: 6px;">
                 <img src="../Imgs/fresa.jpg" class="card-img-top" alt="fresa">
                 <div class="card-body">
                     <h5 class="card-title">Fresita</h5>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="margin: 6px;">
                 <img src="../Imgs/kiwi.jpg" class="card-img-top" alt="kiwi">
                 <div class="card-body">
                     <h5 class="card-title">Kiwi</h5>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" style="margin: 6px;">
                 <img src="../Imgs/piña.jpg" class="card-img-top" alt="piña">
                 <div class="card-body">
                     <h5 class="card-title">Piña</h5>
@@ -289,7 +289,7 @@
             <hr>
         </div>
         <footer>
-            <h6 class="container text-center"> Copyright © 2023 Diseños de Danii (con Bootstrap :P ). Todos los derechos
+            <h6 class="container text-center"> Copyright © 2023 Devalapars. Todos los derechos
                 reservados.</h6>
         </footer>
     </div>
